fix help card illustration alignment

--- a/src/app/components/molecules/bwa-help-card/style.scss
+++ b/src/app/components/molecules/bwa-help-card/style.scss
@@ -1,5 +1,6 @@
 .component-help-card {
     .illustration {
+        display: block;
         margin: 0 auto;
         max-width: 300px;
     }
